# hl7types

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  noxfile.py  pyproject.toml
.github/workflows/: changelog.yml  ci.yml  publish.yml  tox.yml
docs/: api.rst  changelog.md  conf.py  conformance.rst  contributing.rst  decoding.rst  errors.rst  getting_started.rst  hl7_reference.rst  index.rst  registry.rst  validation.rst
docs/_ext/: hl7_autodoc.py
docs/api/: codecs.rst  conformance.rst  core.rst  errors.rst  registry.rst
docs/hl7/: v2_1.rst  v2_1_datatypes.rst  v2_1_groups.rst  v2_1_messages.rst  v2_1_segments.rst  v2_2.rst  v2_2_datatypes.rst  v2_2_groups.rst  v2_2_messages.rst  v2_2_segments.rst  v2_3.rst  v2_3_1.rst  v2_3_1_datatypes.rst  v2_3_1_groups.rst  v2_3_1_messages.rst  v2_3_1_segments.rst  v2_3_datatypes.rst  v2_3_groups.rst  v2_3_messages.rst  v2_3_segments.rst  v2_4.rst  v2_4_datatypes.rst  v2_4_groups.rst  v2_4_messages.rst  v2_4_segments.rst  v2_5.rst  v2_5_1.rst  v2_5_1_datatypes.rst  v2_5_1_groups.rst  v2_5_1_messages.rst  v2_5_1_segments.rst  v2_5_datatypes.rst  v2_5_groups.rst  v2_5_messages.rst  v2_5_segments.rst  v2_6.rst  v2_6_datatypes.rst  v2_6_groups.rst  v2_6_messages.rst  v2_6_segments.rst  (+25 more)
docs/reference/: hl7types.codecs.er7.rst  hl7types.codecs.rst  hl7types.codecs.xml.rst  hl7types.hl7.rst  hl7types.hl7.v2_1.datatypes.rst  hl7types.hl7.v2_1.groups.rst  hl7types.hl7.v2_1.messages.rst  hl7types.hl7.v2_1.rst  hl7types.hl7.v2_1.segments.rst  hl7types.hl7.v2_2.datatypes.rst  hl7types.hl7.v2_2.groups.rst  hl7types.hl7.v2_2.messages.rst  hl7types.hl7.v2_2.rst  hl7types.hl7.v2_2.segments.rst  hl7types.hl7.v2_3.datatypes.rst  hl7types.hl7.v2_3.groups.rst  hl7types.hl7.v2_3.messages.rst  hl7types.hl7.v2_3.rst  hl7types.hl7.v2_3.segments.rst  hl7types.hl7.v2_3_1.datatypes.rst  hl7types.hl7.v2_3_1.groups.rst  hl7types.hl7.v2_3_1.messages.rst  hl7types.hl7.v2_3_1.rst  hl7types.hl7.v2_3_1.segments.rst  hl7types.hl7.v2_4.datatypes.rst  hl7types.hl7.v2_4.groups.rst  hl7types.hl7.v2_4.messages.rst  hl7types.hl7.v2_4.rst  hl7types.hl7.v2_4.segments.rst  hl7types.hl7.v2_5.datatypes.rst  hl7types.hl7.v2_5.groups.rst  hl7types.hl7.v2_5.messages.rst  hl7types.hl7.v2_5.rst  hl7types.hl7.v2_5.segments.rst  hl7types.hl7.v2_5_1.datatypes.rst  hl7types.hl7.v2_5_1.groups.rst  hl7types.hl7.v2_5_1.messages.rst  hl7types.hl7.v2_5_1.rst  hl7types.hl7.v2_5_1.segments.rst  hl7types.hl7.v2_6.datatypes.rst  (+31 more)
examples/: build_ack.py  custom_z_segment.py  er7_to_xml.py  lenient_decode_missing_segment.py  parse_adt_a01.py  profile_validation.py  validate_oru_r01.py
hl7types/: __init__.py  _utils.py  registry.py
hl7types/codecs/er7/: __init__.py  decoder.py  encoder.py
hl7types/codecs/xml/: __init__.py  decoder.py  encoder.py
hl7types/decoders/: er7.py
hl7types/encoders/: er7.py
hl7types/hl7/: __init__.py  _validators.py
hl7types/hl7/v2_1/: __init__.pyi  _validators.py
hl7types/hl7/v2_5/: __init__.py
hl7types/hl7/v2_7_1/: __init__.py
hl7types/hl7/v2_8_2/: _validators.py
hl7types/profiles/builder/: __init__.py
hl7types/profiles/parser/: __init__.py  constraints.py
hl7types/utils/: error.py
hl7types/v2_1/datatypes/: __init__.py
hl7types/v2_1/groups/: ADR_A19_QUERY_RESPONSE.py  ADT_A17_PATIENT.py  BAR_P01_VISIT.py  BAR_P02_PATIENT.py  ORM_O01_CHOICE.py  ORM_O01_ORDER.py  ORM_O01_ORDER_DETAIL.py  ORM_O01_PATIENT.py  ORR_O02_CHOICE.py  ORR_O02_ORDER.py  ORR_O02_ORDER_DETAIL.py  ORR_O02_PATIENT.py  ORU_R01_OBSERVATION.py  ORU_R01_ORDER_OBSERVATION.py  ORU_R01_PATIENT.py  ORU_R01_PATIENT_RESULT.py  ORU_R03_OBSERVATION.py  ORU_R03_ORDER_OBSERVATION.py  ORU_R03_PATIENT.py  ORU_R03_PATIENT_RESULT.py  __init__.py
hl7types/v2_1/messages/: ACK.py  ADR_A19.py  ADT_A01.py  ADT_A02.py  ADT_A03.py  ADT_A04.py  ADT_A05.py  ADT_A06.py  ADT_A07.py  ADT_A08.py  ADT_A09.py  ADT_A10.py  ADT_A11.py  ADT_A12.py  ADT_A13.py  ADT_A14.py  ADT_A15.py  ADT_A16.py  ADT_A17.py  ADT_A18.py  ADT_A20.py  ADT_A21.py  ADT_A22.py  ADT_A23.py  ADT_A24.py  BAR_P01.py  BAR_P02.py  DFT_P03.py  DSR_Q01.py  DSR_Q03.py  MCF_Q02.py  ORM_O01.py  ORR_O02.py  ORU_R01.py  ORU_R03.py  QRY_A19.py  QRY_Q01.py  QRY_Q02.py  UDM_Q05.py  __init__.py
hl7types/v2_1/segments/: BHS.py  DG1.py  EVN.py  FHS.py  FTS.py  GT1.py  MSH.py  ORC.py  PID.py  PR1.py  UB1.py
hl7types/v2_2/datatypes/: CE.py  CM_CCD.py  CM_DLD.py  CM_DTN.py  CM_FINANCE.py  CM_GROUP_ID.py  CM_JOB_CODE.py  CM_LICENSE_NO.py  CM_PAT_ID.py  CM_RMC.py  CM_SPS.py  CM_UVC.py  CM_VR.py  CN_PERSON.py  FT.py  TQ.py  (+2 more)
hl7types/v2_5/: __init__.py
tests/: test_dt_fallback.py  test_encoding_characters.py  test_escape.py  test_generic_parser.py  test_package_imports.py  test_pipe_parser.py  test_profile_security_contract.py  test_profiles.py  test_registry.py  test_utils_error.py
tests/codecs/: test_decoder_coverage.py  test_encoding_characters.py  test_er7_decoder_branches.py  test_er7_decoder_edge_cases.py  test_er7_encoder_branches.py  test_er7_pid_required_decode_contract.py  test_er7_roundtrip.py  test_escape.py  test_generic_parser.py  test_lenient_decode.py  test_pipe_parser.py  test_strict_decoding.py  test_truncation_character.py  test_xml_decoder.py  test_xml_encoder.py  test_xml_pid_required_decode_contract.py  test_xml_security_contract.py
tests/models/: test_abstract_composite.py  test_abstract_group.py  test_abstract_message.py  test_abstract_segment.py  test_abstract_type.py  test_ack_message.py  test_adt_a17_message.py  test_adt_a17_patient_group.py  test_canonical_model_class_factory.py  test_choice_groups.py  test_convenience_model_parse.py  test_generic_composite.py  test_generic_message.py  test_generic_primitive.py  test_is_empty.py  test_max_length.py  test_msh_segment.py  test_nte_segment.py  test_oru_r01_order_observation_group.py  test_pid_required_fields.py  test_repeating_segments.py  test_required_repeating_field.py  test_super_structure.py
(+24162 files in other folders)
