[project]
name = "hl7types"
version = "0.5.1"
description = "Typed, Pydantic-powered HL7 v2 models with built-in ER7 and XML serialisation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Keiron O'Shea", email = "keiron@keiron.xyz"}
]
keywords = [
    "hl7",
    "hl7v2",
    "healthcare",
    "interoperability",
    "pydantic",
    "er7",
    "xml",
    "clinical",
    "messaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.13.4",
    "typing_extensions>=4.0",
]

[project.urls]
Repository = "https://github.com/KeironO/hl7types"
Issues = "https://github.com/KeironO/hl7types/issues"
Documentation = "https://hl7types.readthedocs.io"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pre-commit>=4.6.0; python_version >= '3.10'",
    "pyright>=1.1.0; python_version >= '3.10'",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11.0; python_version >= '3.10'",
]
docs = [
    "furo>=2025.12.19; python_version >= '3.11'",
    "myst-parser>=4.0.1; python_version >= '3.11'",
    "sphinx>=8.1.3; python_version >= '3.11'",
    "sphinx-autodoc-typehints>=3.0.1; python_version >= '3.11'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["hl7types"]
omit = ["hl7types/hl7/*"]

[tool.ruff]
line-length = 100
exclude = ["hl7types/hl7/**", "tests/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
include = ["hl7types/codecs", "hl7types/__init__.py", "hl7types/hl7/__init__.py", "hl7types/hl7/*"]
pythonVersion = "3.8"
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"hl7types/hl7/**/__init__.py" = ["F401"]
